# CardDetect

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.bat  main.cpp  make_database.py  setup_classifier.py
data/: card_database.json
include/: CameraCapture.h  DisplayManager.h  FrameProcessor.h  SimilarityModel.h  collision.h  consts.h  misc.h  types.h
scripts/: cardart.py  cardlookup.py
src/: CameraCapture.cpp  DisplayManager.cpp  FrameProcessor.cpp  SimilarityModel.cpp
